fix image display not fitting

--- a/style.css
+++ b/style.css
@@ -148,8 +148,8 @@ body {
   grid-area: image;
   display: inline-block;
   border: 1px solid #CCD2D9;
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 32px);
+  height: calc(100% - 32px);
   border-radius: 4px;
   background-color: #FFFFFF;
   background-repeat: no-repeat;
